--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
     <h1>
         Tecnologia: um sonho.
     </h1>
+    <p>
+        A tecnologia sempre está mudando, ficando mais complexa, maior. Muitos sentem até
+        medo, mas na minha percepção, ela também pode ser algo completamente cativante,
+        reviver memórias cada vez mais completas e emocionantes, é algo que pode envolver
+        a família, amigos, momentos felizes. A tecnologia trás o receio, mas pode ser Muito
+        maior do que apenas robôs que se parecem humanos.
+        Tem muito ainda para se explorar desse mundo magnífico e espero poder contribuir
+        para isso, espero transformar esse vale da estranheza em algo que pode ajudar muita
+        gente e trazer o sorriso no rosto das pessoas novamente.
+    </p>
+
 
 </body>
 </html>
