adicionei h3 para dar seguimento a lista

--- a/index.html
+++ b/index.html
@@ -20,6 +20,15 @@
         gente e trazer o sorriso no rosto das pessoas novamente.
     </p>
 
-
+    
+    <h3>Motivos para aprender tecnologia</h3>
+    
+    <ul>
+        <li>Ajudar os que não sabem direito</li>
+        <li>Arrumar as coisas de casa</li>
+        <li>Deixar as pessoas felizes ensinando códigos simples</li>
+        <li><strike>Não ficar estressado se alguem pedir para você arrumar o computador dele </strike>
+        </li>
+    </ul>
 </body>
 </html>
